added swagger config, updated env file, removed mapping dump file, removed extra comments